# FIAP-9SOAT-Challenge-1

./: README.md  app.py  builder.py  pyproject.toml
docker/: app.Dockerfile
src/adapters/data_mappers/: compra_data_mapper.py  meio_de_pagamento_data_mapper.py  pagamento_data_mapper.py  produto_aggregate_data_mapper.py  produto_entity_data_mapper.py
src/adapters/driver/API/: client_router.py  payment_router.py  pedido_router.py  product_router.py  produto_router.py  purchase_router.py  queue_router.py
src/core/application/interfaces/: pagamento.py  payment.py  pedido_command.py  pedido_query.py  product_command.py  product_query.py  produto_query.py  purchase.py
src/core/application/ports/: category_query.py  compra_query.py  meio_de_pagamento_query.py  product_query.py
src/core/application/services/: cliente_service.py  pagamento_service.py  pedido_service_command.py  pedido_service_query.py  product_service_command.py  product_service_query.py  produto_service_query.py
src/core/domain/aggregates/: client_aggregate.py  cliente_aggregate.py  pedido_aggregate.py
src/core/domain/entities/: categoria_entity.py  cliente_entity.py  compra_entity.py  meio_de_pagamento_entity.py  pagamento_entity.py  usuario_entity.py
src/core/domain/repositories/: client_repository.py  pedido_repository.py
src/core/domain/value_objects/: persona_value_object.py
src/core/helpers/options/: pedido_find_options.py
tests/core/application/services/: test_auth_service.py  test_client_service.py  test_pagamento_service.py  test_payment_service.py  test_pedido_service_command.py  (+3 more)
(+21 files in other folders)
